# ai-cookbook

./: README.md
hacker-news-bot/base/: justfile  pyproject.toml
hacker-news-bot/base/src/: app.py  chat.py  service.py  tools.py
hacker-news-bot/base/testdata/: single_call.json
hacker-news-bot/few-shot/backend/: docker-compose.yaml  pyproject.toml
hacker-news-bot/few-shot/backend/src/: app.py  chat.py  service.py
hacker-news-bot/few-shot/ingestion/: Dockerfile  docker-compose.index.yaml  docker-compose.parse.yaml  justfile  pyproject.toml
hacker-news-bot/few-shot/ingestion/src/: index.py  parse.py
hacker-news-bot/retry/: docker-compose.yaml  justfile  pyproject.toml
hacker-news-bot/retry/src/: chat.py
hacker-news-bot/retry/testdata/: multiple_calls.json
hacker-news-bot/thinking/: README.md  justfile  pyproject.toml
hacker-news-bot/thinking/src/: chat.py
hacker-news-bot/thinking/testdata/: think.json
